# codebox-rmcp

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  任务列表.md
docs/: architecture.md  s3-injection-design.md  security-sandbox-design.md  security-upgrade-plan.md
prompt/: v1.markdown
src/: auth.rs  executor.rs  lib.rs  main.rs  server.rs  tools.rs  worker_client.rs
