[package]
name = "codebox-rmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-streamable-http-server", "auth", "schemars"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tempfile = "3"
tower-http = { version = "0.6", features = ["cors"] }
