[package]
name = "codebox-rmcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "codebox-rmcp"
path = "src/main.rs"

[[bin]]
name = "codebox-worker"
path = "src/bin/worker.rs"

[dependencies]
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-streamable-http-server", "auth", "schemars"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tempfile = "3"
tower-http = { version = "0.6", features = ["cors"] }
